# Asparagus

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  architecture.txt  config.json  data.cjson  md.db  meta.db  mkdocs.yml  no2_1_run.py  pyproject.toml  run.py  run_acala.py  run_check.py  run_datacontainer.py  run_dielsalder.py  run_difftest.py  run_formaldehyde.py  run_nh3.py  run_no2_1.py  run_pycharmm.py  run_sn2.py  run_test.py  run_zundel.py  setup.py  sn2.db  sn2_config.json
asparagus/: __init__.py  asparagus.py  main.py
charmm_data/: ammonia.crd
data/: c2h4.xyz  c4h6.ase.db  (+18 more)
docs/: about.md  contributing.md  examples.md  index.md  installation.md  pyproject.toml  requirements.txt  tutorials.md
docs/source/: about.rst  api.rst  conf.py  config_file.rst  contribute.rst  example.rst  index.rst  installation.rst  main.rst  tutorial.rst  usage.rst
docs/source/api/: asparagus.interface.rst  asparagus.layer.rst  asparagus.model.rst  asparagus.module.rst  asparagus.rst  asparagus.sample.rst  asparagus.settings.rst  asparagus.src.ab_initio_calc.rst  asparagus.src.data.rst  asparagus.src.interface.rst  asparagus.src.layers.rst  asparagus.src.model.rst  asparagus.src.rst  asparagus.src.sample.rst  asparagus.src.settings.rst  asparagus.src.tests.rst  asparagus.src.tools.rst  asparagus.src.train.rst  asparagus.src.utils.rst  asparagus.train.rst  asparagus.utils.rst  modules.rst  src.ab_initio_calc.rst  src.data.rst  src.interface.rst  src.layers.rst  src.model.rst  src.rst  src.sample.rst  src.settings.rst  src.tests.rst  src.tools.rst  src.train.rst  src.utils.rst
(+517 files in other folders)
